--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     
 <!-- Font Awesome JS -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<!-- LightWidget WIDGET -->
+<script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
 
 </head>
 <body>
@@ -19,7 +21,7 @@
 <!-- Nav Bar  -->
 <div class="navbar">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <a class="active" href="./index.html" id="home">Home</a>
             <a href="#mission-statement" id="mission">Our Mission</a>
             <a href="#me-nu" id="menu">Our Menu</a>
@@ -36,20 +38,20 @@
     </div>
 </div>
 
+<!-- LOGO CONTAINER -->
 <div class="logo">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <img src="./assets/images/finalLogo.jpg" alt="logo" id="logo">
         </div>
     </div>
 </div>
 
-<!-- Page Break -->
-<!-- <hr class="break1"> -->
 
+<!-- MISSION CONTAINER -->
 <div class="mission">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div id="mission-statement"></div>
             <h1>OUR MISSION IS SIMPLE.....</h1>
             <br>
@@ -60,17 +62,18 @@
             <p>2% of our profits go to end world hunger!!</p>
             <p>Finally a food truck where you don't have to worry about what's in your food.</p>
             <p>We love food as much as you do.</p>
-            <p>Lets eat up!</p>
+            <p id="last">Lets eat up!</p>
+            <!-- instagram widget -->
+            <iframe src="//lightwidget.com/widgets/ad47a66bfa0a5384981e23cad177b650.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
         </div>
     </div>
 </div>
 
-<!-- Page Break -->
-<!-- <hr class="break1"> -->
 
+<!-- MENU AND INGREDIENTS CONTAINER -->
 <div class="menu">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div id="me-nu"></div>
             <h1>STAY TUNED FOR OUR MENU</h1>
 
@@ -102,12 +105,10 @@
     </div>
 </div>
 
-<!-- Page Break -->
-<!-- <hr class="break1"> -->
-
+<!-- CATERING AND DELIVERY CONTAINER -->
 <div class="catering">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <br><br>
             <div id="cater-ing"></div>
             <h4>LET US CATER YOUR MEETINGS OR EVENTS</h4>
@@ -120,12 +121,25 @@
     </div>
 </div>
 
-<!-- Page Break -->
-<!-- <hr class="break1"> -->
+<!-- LOCATION CONTAINER -->
+<div class="location">
+    <div class="row">
+        <div class="col-md-12">
+            <div id="locat-ion"></div>
+            <a href="https://www.google.com/maps/dir//Austin,+Texas/"><img style="vertical-align:top" src="https://maps.googleapis.com/maps/api/staticmap?center=Austin,+Texas&zoom=13&scale=1&size=500x250&maptype=roadmap&key=AIzaSyBA2JEy5s1XbWgxkIFTb3I_DRZ4P2hvOqI&format=png&visual_refresh=true" alt="Google Map of Austin, Texas"></a>
+            <h2>We are located in the heart of Texas.</h2>
+            <h3>You can find us serving delicious, nutritious food at...</h3>
+            <br>
+            <h4> 12345 Congress Ave Austin, Texas 78701</p>
+        </div>
+    </div>
+</div>
 
+
+<!-- FOUNDERS CONTAINER -->
 <div class="founders">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
            <h3>Always Hungry Founders Jason Stovall & Shelby Sanditen</h3> 
            <img src="./assets/images/founders1.jpg" alt="founders" style="height:400px;">
            <div class="float-sm-left" id="bio">
@@ -144,10 +158,8 @@
     </div>
 </div>
 
-<!-- Page Break -->
-<!-- <hr class="break1"> -->
 
-      
+<!-- FOOTER CONTAINER -->
 <footer>
     <div class="container-fluid" id="footer">
         <div class="row">
