update with insta slideshow

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     
 <!-- Font Awesome JS -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-<!-- LightWidget WIDGET -->
-<script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+<!-- instagram WIDGET -->
+<script src="https://snapwidget.com/js/snapwidget.js"></script>
 
 </head>
 <body>
@@ -63,8 +63,10 @@
             <p>Finally a food truck where you don't have to worry about what's in your food.</p>
             <p>We love food as much as you do.</p>
             <p id="last">Lets eat up!</p>
-            <!-- instagram widget -->
-            <iframe src="//lightwidget.com/widgets/ad47a66bfa0a5384981e23cad177b650.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+        
+            <!-- SnapWidget with CSS -->
+            <iframe src="https://snapwidget.com/embed/665657" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe> 
+            <div style="font:10px/14px 'Roboto','Helvetica Neue',Arial,Helvetica,sans-serif;font-weight:400;width:100%;text-align:right"><a href="https://snapwidget.com" style="color:#777;text-decoration:none;">SnapWidget · Instagram Widget</a></div> -->
         </div>
     </div>
 </div>
