--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/CSS/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/CSS/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/CSS/mediaQueries.css" />
-    <script src="./assets/javascript/app.js"></script>
     
 <!-- Font Awesome JS -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -65,7 +64,7 @@
             <p id="last">Lets eat up!</p>
         
             <!-- SnapWidget with CSS -->
-            <iframe src="https://snapwidget.com/embed/665657" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe> 
+            <!-- <iframe src="https://snapwidget.com/embed/665657" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
             <div style="font:10px/14px 'Roboto','Helvetica Neue',Arial,Helvetica,sans-serif;font-weight:400;width:100%;text-align:right"><a href="https://snapwidget.com" style="color:#777;text-decoration:none;">SnapWidget · Instagram Widget</a></div> -->
         </div>
     </div>
@@ -77,7 +76,7 @@
     <div class="row">
         <div class="col-md-12">
             <div id="me-nu"></div>
-            <h1>STAY TUNED FOR OUR MENU</h1>
+            <h1>*STAY TUNED FOR OUR MENU*</h1>
 
             <div class="menu-container">
                     <img src="./assets/images/salmon.jpeg" class="rounded float-left" style="height:200px; width: 200px;">
@@ -128,11 +127,10 @@
     <div class="row">
         <div class="col-md-12">
             <div id="locat-ion"></div>
-            <a href="https://www.google.com/maps/dir//Austin,+Texas/"><img style="vertical-align:top" src="https://maps.googleapis.com/maps/api/staticmap?center=Austin,+Texas&zoom=13&scale=1&size=500x250&maptype=roadmap&key=AIzaSyBA2JEy5s1XbWgxkIFTb3I_DRZ4P2hvOqI&format=png&visual_refresh=true" alt="Google Map of Austin, Texas"></a>
             <h2>We are located in the heart of Texas.</h2>
             <h3>You can find us serving delicious, nutritious food at...</h3>
-            <br>
-            <h4> 12345 Congress Ave Austin, Texas 78701</p>
+            <h4>12345 Congress Ave Austin, Texas 78701</h4>
+            <a href="https://www.google.com/maps/dir//Austin,+Texas/"><img style="vertical-align:top" src="https://maps.googleapis.com/maps/api/staticmap?center=Austin,+Texas&zoom=13&scale=1&size=500x250&maptype=roadmap&key=AIzaSyBA2JEy5s1XbWgxkIFTb3I_DRZ4P2hvOqI&format=png&visual_refresh=true" alt="Google Map of Austin, Texas"></a>
         </div>
     </div>
 </div>
@@ -176,20 +174,14 @@
     </div>
 </footer>
 
+<!-- Return to Top -->
+<a href="javascript:" id="return-to-top"><i class="fas fa-arrow-up"></i></a>
+
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
+<script src="./assets/javascript/app.js"></script>
 
 </body>
 </html>
-
-<!-- JAVASCRIPT -->
-<script>
-
-$(document).ready(function(){
-    $('[data-toggle="tooltip"]').tooltip(); 
-});
-
-</script>
